--- a/src/table.css
+++ b/src/table.css
@@ -181,8 +181,9 @@ td  {
   th {
     font-family: 'Nunito', sans-serif;
     text-align: center;
-    width: 100%;
-    padding: 8px;
+    width: 100% !important;
+    padding-left: 24px;
+    padding-right: 24px;
     font-size: 14px;
   }
 
