--- a/src/table.css
+++ b/src/table.css
@@ -181,10 +181,10 @@ td  {
   th {
     font-family: 'Nunito', sans-serif;
     text-align: center;
-    width: 100% !important;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-left: 12px;
+    padding-right: 12px;
     font-size: 14px;
+    white-space: nowrap;
   }
 
   tr {
@@ -198,6 +198,15 @@ td  {
     padding: 2px;
     font-size: 12px;
   }
+  .text-size-14{
+    font-size: 10px !important;
+  }
+
+  .extra-padding{
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
+
   }
 
 .overflow{
@@ -214,4 +223,17 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.padding-left{
+  padding-left: 2px !important;
+}
+
+.padding-right{
+  padding-right: 2px !important;
+}
+
+.padding-center{
+  padding-left: 6px !important;
+  padding-right: 6px !important;
 }
