Added Popper Dependencies (not implemented), Added 15 and 30 Day Drop Down Button. Changed Alert to Modal View

--- a/src/table.css
+++ b/src/table.css
@@ -255,3 +255,34 @@ input[type=number] {
 .text-size-14{
   font-size: 14px !important;
 }
+
+select{ 
+  width: 120px !important;
+  height: 35px !important;
+  font-size: 14px !important;
+  text-align: left !important;
+  font-family: 'Nunito', sans-serif !important;
+}
+
+.top-12{
+  margin-top: 10px !important;
+}
+
+.getEternalHeaderL{
+  text-align: left !important;
+  font-family: 'Nunito', sans-serif;
+}
+
+.item-right{
+  align-self: right !important;
+}
+
+.modal-popup{
+  font-family: 'Nunito', sans-serif !important;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.text-size-17{
+  font-size: 17px !important;
+}
