--- a/src/table.css
+++ b/src/table.css
@@ -214,6 +214,9 @@ td  {
     padding-left: 20px !important;
     padding-right: 20px !important;
   }
+  .modal-text-small{
+    font-size: 12px !important;
+  }
 
   }
 
@@ -233,19 +236,6 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-.padding-left{
-  padding-left: 2px !important;
-}
-
-.padding-right{
-  padding-right: 2px !important;
-}
-
-.padding-center{
-  padding-left: 6px !important;
-  padding-right: 6px !important;
-}
-
 .text-size-10{
   font-size: 10px !important;
 }
@@ -256,12 +246,12 @@ input[type=number] {
   font-size: 14px !important;
 }
 
-select{ 
-  width: 120px !important;
-  height: 35px !important;
-  font-size: 14px !important;
-  text-align: left !important;
-  font-family: 'Nunito', sans-serif !important;
+.select-days{ 
+  width: 120px;
+  height: 35px;
+  font-size: 14px;
+  text-align: left;
+  font-family: 'Nunito', sans-serif;
 }
 
 .top-12{
@@ -290,3 +280,12 @@ select{
 .width-100{
   width: 100% !important;
 }
+
+.fleet-rank-custom{
+  /* width: 201.58px !important;
+  height: 38px !important; */
+  font-size: 14px !important;
+  text-align: left !important;
+  font-family: 'Nunito', sans-serif !important;
+}
+
