--- a/src/table.css
+++ b/src/table.css
@@ -24,7 +24,7 @@ td  {
 }
 
 .getEternalHeader{
-  text-align: center;
+  text-align: left;
   font-family: 'Nunito', sans-serif;
 }
 
@@ -129,7 +129,6 @@ td  {
 .text-center{
   text-align: center;
   font-family: 'Nunito', sans-serif;
-  font-weight: 700;
 }
 
 .btn-custom{
@@ -246,15 +245,12 @@ input[type=number] {
 }
 
 .select-days{ 
-  width: 120px;
-  height: 35px;
+  width: 100%;
+  height: 100%;
   font-size: 14px;
   text-align: left;
   font-family: 'Nunito', sans-serif;
-}
-
-.top-12{
-  margin-top: 10px !important;
+  border-color: transparent !important;
 }
 
 .getEternalHeaderL{
@@ -321,4 +317,13 @@ input[type=number] {
   border-color: #000 !important;
   border-width: 2px !important;
   border-radius: 0 !important;
+}
+
+.select-currency{ 
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  text-align: left;
+  font-family: 'Nunito', sans-serif;
+  border-color: transparent !important;
 }
