--- a/src/table.css
+++ b/src/table.css
@@ -137,6 +137,18 @@ td  {
   width: 100%;
 }
 
+.btn-custom:hover{
+  background-color: #1e8ad1 !important;
+  color: white !important;
+  border-color: #1e8ad1 !important;
+}
+
+.stretch:hover{
+  background-color: #1e8ad1 !important;
+  color: white !important;
+  border-color: #1e8ad1 !important;
+}
+
 .input-group-text{
   width: 80% !important;
 }
@@ -244,15 +256,6 @@ input[type=number] {
   font-size: 14px !important;
 }
 
-.select-days{ 
-  width: 100%;
-  height: 100%;
-  font-size: 14px;
-  text-align: left;
-  font-family: 'Nunito', sans-serif;
-  border-color: transparent !important;
-}
-
 .getEternalHeaderL{
   text-align: left !important;
   font-family: 'Nunito', sans-serif;
@@ -314,7 +317,7 @@ input[type=number] {
   font-size: 14px;
   text-align: left;
   font-family: 'Nunito', sans-serif;
-  border-color: #000 !important;
+  border-color: #212529!important;
   border-width: 2px !important;
   border-radius: 0 !important;
 }
@@ -326,6 +329,29 @@ input[type=number] {
   text-align: left;
   font-family: 'Nunito', sans-serif;
   border-color: transparent !important;
+  border-radius: 0 !important;
+}
+
+.select-days{ 
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  text-align: left;
+  font-family: 'Nunito', sans-serif;
+  border-color: transparent !important;
+  border-radius: 0 !important;
+}
+
+.select-days:hover{
+  background-color: rgba(153, 151, 151, 0.138);
+}
+
+.select-currency:hover{
+  background-color: rgba(153, 151, 151, 0.138);
+}
+
+.select-lang:hover{
+  background-color: rgba(153, 151, 151, 0.138);
 }
 
 .text-left-x{
@@ -333,3 +359,4 @@ input[type=number] {
   font-family: 'Nunito', sans-serif;
   font-weight: 700;
 }
+
